# np_pipeline_qc

./: .gitignore  README.md  environment.yml  get_sessions.py  pyproject.toml  validate_local_d2_files_ccb.py
scripts/: launch_qc_all_modules.bat  run_qc_dynamicgating.py  run_qc_ttn.py
src/np_pipeline_qc/: __init__.py  __main__.py  classes.py
src/np_pipeline_qc/legacy/: D1_LIMS_schema.py  D1_local_schema.py  D2_LIMS_schema.py  EcephysBehaviorSession.py  align_physiology_plots.py  analysis.py  analyze_nwb.py  batch_copy_d2_files_for_LIMS_upload.py  batch_copy_d2_lims_files.py  batch_hab_qc.py  batch_lims_validation.py  batch_qc.py  batch_rf.py  batch_variability_qc.py  behavior_analysis.py  build_stim_tables.py  channel_visual_modulation.py  check_datacube.py  copy_d2_lims_files_for_upload.py  d2_upload_tool.py  data_getters.py  ebs_analysis.py  ebs_object_analysis.py  ecephys.py  get_RFs_standalone.py  get_probe_info.py  get_sessions.py  lims_validation.py  local_data_validation.py  nwb_validation_optotagging.py  probeSync_qc.py  probe_alignment_data_io.py  probe_track_day_assignment.py  qc_cmd_caller.py  query_lims.py  reformat_probe_annotation_files.py  run_qc_callable.py  run_qc_class.py  run_qc_modular.py  save_ecephysbehavior_session.py  (+10 more)
src/np_pipeline_qc/sorted/: get_spike_depths.py  spike_depths.py
