[project]
name = "np_pipeline_qc"
version = "0.0.2"
description = "Analysis and visualization code for quality-control of Neuropixels pipeline data."
authors = [
    { name = "corbennett", email = "corbettb@alleninstitute.org" },
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
dependencies = [
    "np-session>=0.4.26",
    # "packaging==21.3",
    # "scikit-image>=0.20.0",
    # "h5py>=3.8.0",
    # "numpy>=1.24.0",
    # "pandas>=1.5.3",
    # "tables>=3.8.0",
    # "pytz==2022.7.1",
    # "opencv-python>=4.7.0",
    # "nest-asyncio>=1.5.6",
    # "marshmallow>=3.10.0",
    # "visual-behavior @ git+https://github.com/AllenInstitute/visual_behavior_analysis.git",
    "allensdk>=1.2.0",
    "pandas>=1.5.3",
    "statsmodels>=0.13.5",
    "tables>=3.8.0",
    "visual-behavior @ git+https://github.com/AllenInstitute/visual_behavior_analysis.git",
    "cython>=0.29.33",
    "scikit-image>=0.20.0",
    "h5py>=3.8.0",
    "numba>=0.56.4", # not 3.11 compatible as of Mar '23
    "numpy==1.23.5",
    "aiohttp>=3.8.4",
    "markupsafe==2.0.0",
    "beautifulsoup4>=4.12.0",
    "pywin32>=305",
]
requires-python = ">=3.10"
readme = "README.md"

[tool.pdm.resolution.overrides]
scikit-image = ">=0.20.0"
# packaging = ">=21.3"
aiohttp = ">=3.8.0"
llvmlite = ">=0.39.1"
numba = ">=0.56.4"
h5py = ">=3.8.0"
numpy = ">=1.23.0, <1.24.0"
statsmodels = ">=0.13.5"
pandas = ">=1.5.3"
tables = ">=3.8.0"
pytz = "2022.7.1"
redis = ">=4.5.2"
async-timeout = ">=4.0.0"
# opencv-python = ">=4.7.0"
# nest-asyncio = ">=1.5.6"
# marshmallow = ">=3.10.0"
# pytz = "https://mypypi.org/packages/pytz-2020.9-py3-none-any.whl"  # absolute URL

[project.optional-dependencies]
dev = [
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "blue>=0.9.1",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "bump>=1.3.2",
    "types-backports>=0.1.3",
    "ruff>=0.0.260",
]

[tool.pdm.scripts]
# usage: pdm run <script> [args]
ruff = "ruff --fix src"
blue = "blue src"
pytest = "pytest --cov"
prebuild = {composite = ["blue", "ruff", "pytest"]}
bump = "bump pyproject.toml" # defaults to patch; `pdm run bump -m` to bump minor
build = {composite = ["prebuild", "pdm build"]}
dry-run = {composite = ["prebuild", "pdm build", "pdm publish --no-build --repository https://test.pypi.org/simple"]}
publish = {composite = ["pdm build", "pdm publish --no-build"]}

[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"
