[project]
name = "np_pipeline_qc"
version = "0.0.2"
description = "Analysis and visualization code for quality-control of Neuropixels pipeline data."
authors = [
    { name = "corbennett", email = "corbettb@alleninstitute.org" },
]
maintainers = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
dependencies = [
    "np-session>=0.4.26",
    "visual-behavior @ git+https://github.com/bjhardcastle/visual_behavior_analysis.git",
]
requires-python = ">=3.8"
readme = "README.md"

[tool.pdm.resolution.overrides]
# matplotlib = ">=3.7.1"
# numpy = ">=1.23.0, <1.24.0"
async-timeout = ">=4.0.0"
# scikit-image = ">=0.20.0"
# # packaging = ">=21.3"
# aiohttp = ">=3.8.0"
# llvmlite = ">=0.39.1"
# numba = ">=0.56.4"
# h5py = ">=3.8.0"
# statsmodels = ">=0.13.5"
# pandas = ">=1.5.3"
# tables = ">=3.8.0"
# pytz = "2022.7.1"
# redis = ">=4.5.2"
# # opencv-python = ">=4.7.0"
# # nest-asyncio = ">=1.5.6"
# # marshmallow = ">=3.10.0"
# # pytz = "https://mypypi.org/packages/pytz-2020.9-py3-none-any.whl"  # absolute URL

[project.optional-dependencies]
dev = [
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "blue>=0.9.1",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "bump>=1.3.2",
    "types-backports>=0.1.3",
    "ruff>=0.0.260",
]
html = [
    "beautifulsoup4",
    "pywin32",
]

[tool.pdm.scripts]
# usage: pdm run <script> [args]
ruff = "ruff --fix src"
blue = "blue src"
pytest = "pytest --cov"
prebuild = {composite = ["blue", "ruff", "pytest"]}
bump = "bump pyproject.toml" # defaults to patch; `pdm run bump -m` to bump minor
build = {composite = ["prebuild", "pdm build"]}
dry-run = {composite = ["prebuild", "pdm build", "pdm publish --no-build --repository https://test.pypi.org/simple"]}
publish = {composite = ["pdm build", "pdm publish --no-build"]}

[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"
